adding server side tracing

--- a/helm/demoapp/templates/deployment.yaml
+++ b/helm/demoapp/templates/deployment.yaml
@@ -46,6 +46,8 @@ spec:
             timeoutSeconds: 1
 {{ end }}
           env:
+            - name: JAEGER_AGENT_HOST
+              value: jaeger-all-in-one-agent.kube-system.svc.cluster.local
 {{ if eq $service "metadata" }}
             - name: MONGO-USERNAME
               value: {{ .Values.mongodb.mongodbUsername }}
