--- a/helm/demoapp/charts/jaeger-all-in-one/templates/deployment.yaml
+++ b/helm/demoapp/charts/jaeger-all-in-one/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
   name: {{ template "jaeger-all-in-one.fullname" . }}
+  namespace: {{ default .Release.Namespace .Values.namespace }}
   labels:
     app: {{ template "jaeger-all-in-one.name" . }}
     chart: {{ template "jaeger-all-in-one.chart" . }}
